# minecraft-clone

./: CMakeLists.txt  COMPLETION_SUMMARY.md  ECS_IMPLEMENTATION_SUMMARY.md  PROCEDURAL_ECS_COMPLETION.md  README.md  TEST_INSTRUCTIONS.md  build_and_test.sh  test_ecs_system.sh  test_procedural_system.sh
assets/configs/: voxelcraft.toml
config/: voxelcraft.toml
docs/: AISystem-Final-Summary.md  AISystem-Overview.md  Architecture.md  AudioSystem-Overview.md  BlockSystem-Overview.md  ECS-Overview.md  GraphicsSystem-Overview.md  MultiplayerSystem-Overview.md  PhysicsSystem-Overview.md  PlayerSystem-Overview.md  SaveSystem-Overview.md  UISystem-Overview.md
src/: README.md  main.cpp  test_main.cpp
src/achievement/: AchievementSystem.cpp  AchievementSystem.hpp
src/ai/: AIController.cpp  AIController.hpp  AISystem.cpp  AISystem.hpp  AITypes.hpp  BehaviorTree.cpp  BehaviorTree.hpp  Blackboard.hpp  MemorySystem.cpp  MemorySystem.hpp  Mob.hpp  Pathfinding.cpp  Pathfinding.hpp  PathfindingSystem.hpp  PerceptionSystem.cpp  PerceptionSystem.hpp  SensorySystem.hpp  VillageSystem.hpp
src/audio/: Audio3D.hpp  AudioEffect.hpp  AudioEffectProcessor.hpp  AudioEngine.hpp  AudioManager.cpp  AudioManager.hpp  AudioSource.hpp  MusicSystem.hpp  SoundGenerator.cpp  SoundGenerator.hpp  SoundManager.hpp  SpatialAudioSystem.hpp
src/biome/: Biome.cpp  Biome.hpp  BiomeManager.cpp  BiomeManager.hpp
src/blocks/: Block.cpp  Block.hpp  BlockBehavior.hpp  BlockGenerator.cpp  BlockGenerator.hpp  BlockMeshGenerator.hpp  BlockRegistry.cpp  BlockRegistry.hpp  BlockSystem.cpp  BlockSystem.hpp  TextureAtlas.hpp
src/config/: ConfigSystem.cpp  ConfigSystem.hpp
src/core/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  Engine.cpp  Engine.hpp  EventSystem.cpp  EventSystem.hpp  GameConstants.hpp  GameStateSync.cpp  GameStateSync.hpp  Logger.cpp  Logger.hpp  MemoryManager.cpp  MemoryManager.hpp  NetworkManager.cpp  NetworkManager.hpp  OptimizationSystem.cpp  OptimizationSystem.hpp  PhysicsUtils.hpp  ProceduralGenerator.cpp  ProceduralGenerator.hpp  Profiler.cpp  Profiler.hpp  ResourceManager.cpp  ResourceManager.hpp  SaveManager.cpp  SaveManager.hpp  SkinGenerator.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.cpp  Timer.hpp
src/crafting/: CraftingManager.cpp  CraftingManager.hpp  CraftingRecipe.hpp  CraftingTable.cpp  CraftingTable.hpp  ShapedRecipe.cpp  ShapedRecipe.hpp  ShapelessRecipe.cpp  ShapelessRecipe.hpp  SmeltingRecipe.cpp  SmeltingRecipe.hpp
src/debug/: DebugSystem.cpp  DebugSystem.hpp
src/enchantment/: Enchantment.cpp  Enchantment.hpp  EnchantmentTable.cpp  EnchantmentTable.hpp
src/entities/: Component.cpp  Component.hpp  ECSExample.cpp  ECSExample.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PlayerComponent.cpp  PlayerComponent.hpp  PlayerEntity.cpp  PlayerEntity.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp  System.cpp  System.hpp  TransformComponent.cpp  TransformComponent.hpp
src/events/: EventSystem.cpp  EventSystem.hpp
src/farming/: Crop.cpp  Crop.hpp
src/graphics/: Camera.cpp  Camera.hpp  MaterialSystem.hpp  ParticleSystem.hpp  PostProcess.hpp  RenderPipeline.hpp  Renderer.cpp  Renderer.hpp  ShaderManager.hpp
src/input/: InputManager.cpp  InputManager.hpp  InputSystem.cpp  InputSystem.hpp
src/interaction/: BlockInteraction.cpp  BlockInteraction.hpp
src/inventory/: Inventory.cpp  Inventory.hpp
src/logging/: Logger.cpp  Logger.hpp
src/memory/: MemorySystem.cpp  MemorySystem.hpp
src/mob/: Mob.cpp  Mob.hpp  MobManager.cpp  MobManager.hpp
src/multiplayer/: Client.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkMessages.hpp  NetworkProtocol.hpp  Server.hpp
src/network/: Client.cpp  Client.hpp  NetworkManager.cpp  NetworkManager.hpp  Packet.cpp  Packet.hpp  Server.cpp  Server.hpp
src/parallel/: AsyncCompute.hpp  ParallelTaskSystem.hpp  SIMDMath.hpp  ThreadPool.hpp
src/physics/: Collider.hpp  CollisionManager.cpp  CollisionManager.hpp  CollisionSystem.cpp  CollisionSystem.hpp  Constraint.hpp  ConstraintSolver.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsMaterial.hpp  PhysicsSystem.hpp  PhysicsTypes.hpp  PhysicsWorld.hpp  RigidBody.hpp
src/player/: Camera.hpp  CharacterController.hpp  Inventory.hpp  Player.cpp  Player.hpp  PlayerInput.hpp
src/plugin/: PluginSystem.cpp  PluginSystem.hpp
src/potion/: BrewingStand.cpp  BrewingStand.hpp  Potion.cpp  Potion.hpp
src/procedural/: ProceduralAssetGenerator.hpp  ProceduralGenerator.cpp  ProceduralGenerator.hpp  ProceduralModelGenerator.hpp  ProceduralTextureGenerator.hpp
src/redstone/: RedstoneComponent.cpp  RedstoneComponent.hpp  RedstoneSystem.cpp  RedstoneSystem.hpp
src/resource/: ResourceSystem.cpp  ResourceSystem.hpp
src/save/: AutoSave.hpp  BackupSystem.hpp  Compressor.hpp  SaveFile.hpp  SaveManager.hpp  Serializer.hpp  VersionManager.hpp
src/scripting/: ScriptingSystem.cpp  ScriptingSystem.hpp
src/statistics/: StatisticsSystem.cpp  StatisticsSystem.hpp
src/structures/: Structure.cpp  Structure.hpp  StructureManager.cpp  StructureManager.hpp
src/stubs/: stubs.cpp
src/survival/: FoodSystem.hpp  SurvivalSystem.cpp  SurvivalSystem.hpp
src/textures/: TextureGenerator.cpp  TextureGenerator.hpp
src/tools/: ItemGenerator.cpp  ItemGenerator.hpp  Tool.cpp  Tool.hpp
src/trading/: Trade.cpp  Trade.hpp
src/ui/: HUD.hpp  UIElement.hpp  UIHUD.hpp  UIInventory.hpp  UIManager.cpp  UIManager.hpp  UIManagerSimple.cpp  UIManagerSimple.hpp  UIMenus.hpp  UISystem.cpp  UISystem.hpp  UIWidget.hpp  UIWidgets.hpp
src/window/: Window.cpp  Window.hpp
src/world/: Biome.cpp  Biome.hpp  Chunk.cpp  Chunk.hpp  ChunkManager.hpp  ChunkSystem.cpp  ChunkSystem.hpp  LightingEngine.cpp  LightingEngine.hpp  MobGenerator.cpp  MobGenerator.hpp  NoiseGenerator.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp  WeatherSystem.hpp  World.cpp  World.hpp
